# WEB_Python17M6

./: all_selects_query.py  connection.py  create_tables.py  insert_data.py  pyproject.toml  sql_10q.sql  sql_11q.sql  sql_12q.sql  sql_2q.sql  sql_3q.sql  sql_5q.sql  sql_6q.sql  sql_7q.sql  sql_8q.sql  sql_9q.sql
